# g_translater

./: .env.example  .gitignore  0002_Chapter_2_Bom_Spring_1_clean.txt  Launcher.py  README.md  TransGemini.py  Worker.py  azure_config.py  create_test_epub.py  main_functions.py  pyproject.toml  requirements.txt  run_bot.py  setup_venv.bat  start_bot.bat  startup.sh  telegram_bot.py  telegram_bot_backup.py  test_formats.py  test_html_extraction.py  АРХИТЕКТУРА.md
