# Azure App Service deployment configuration
[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "transgemini-telegram-bot"
version = "1.0.0"
description = "Telegram bot for file translation using Google Gemini AI"
authors = [{name = "BDaaac"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "python-telegram-bot==20.7",
    "google-generativeai==0.8.5",
    "python-docx==1.2.0",
    "EbookLib==0.19",
    "beautifulsoup4==4.13.4",
    "lxml==5.3.0",
    "Pillow==10.4.0",
    "PyQt6==6.9.1",
    "aiofiles==23.2.0",
    "requests==2.32.4",
]
